# hoi4

./: economy.py  forces.py  pyproject.toml  reports.py  workbook.ipynb
hoi4/: economy.py  economy_plan.txt  forces.py  workbook.ipynb
src/hoi4/: economy.py
tests/: economy_test.py
