[tool.poetry]
name = "hoi4"
version = "0.1.0"
description = "Application for helping plan in HOI4."
authors = ["Zan Owsley <zanowsley@gmail.com>"]
readme = "README.md"
repository = "https://github.com/DanZanzibar/hoi4.git"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"